# Commutators

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  tasklist.yaml
include/operators/: Comutators.hpp  Expression.hpp  ImaginaryNumber.hpp  Logging.hpp  NamedNumber.hpp  Operator.hpp  Ordering.hpp  Substitutions.hpp  Utils.hpp  struct_ids.hpp
include/operators/Comutators/: BosonComutators.hpp  Comutators.hpp  GenericComutators.hpp  SpinComutators.hpp
include/operators/Expression/: .Expression.hpp.swp  Evaluate.hpp  Expression.hpp  Operator.hpp  Ordering.hpp  Simplify.hpp  Sort.hpp  Substitutions.hpp  struct_ids.hpp
include/operators/Expression/Infos/: EmptyInfo.hpp  Fock0D.hpp  Fock1D.hpp  GenericInfo.hpp  SpinInfo.hpp
include/operators/NestedExpressions/: Sum.hpp
include/operators/Numbers/: CompositeNumberExpressions.hpp  CompositeNumbers.hpp  ImaginaryNumber.hpp  NamedNumber.hpp
include/operators/Parsing/: Deserialise.hpp  OperatorCreation.hpp  ParsingTree.hpp
include/operators/Substitutions/: Substitutions.hpp
include/operators/Utils/: PrintUtil.hpp  Trace.hpp  Utils.hpp
include/operators/operators/: Sum.hpp
include/operators/transforms/: BasisTransform.hpp  BogoliubovTransform.hpp  BogoliubovTransformFunctions.hpp  BogoliubovTransformFunctionsBase.hpp  Transform.hpp
include/transforms/: BasisTransform.hpp  BogoliubovTransform.hpp  Transform.hpp
lib/operators/: CMakeLists.txt  Expression.cpp  Operator.cpp  PythonModule.cpp
python/: BasicTest.py  CMakeLists.txt  CreateVirtualEnv.cmake  EvaluateTest.py  create_package.py  setup.py
python/FockModule/: README.md
tests/: BogoliubovTests.cpp  BogoliubovUnitTest.cpp  CMakeLists.txt  Commutators.cpp  CompositeNumberTests.cpp  LoggingTest.cpp  NumberTests.cpp  ParseTests.cpp  PhysicalExamples.cpp  PrintTests.cpp  SortTests.cpp  SubstitutionTests.cpp  TransformTests.cpp
tests/Examples/: Bogoliubov.cpp  CMakeLists.txt  HarmonicOscilator.cpp  SimpleFermions.cpp
tests/benchmarks/: CMakeLists.txt  EvaluateBenchmark.cpp
tests/python/: BasicTest.py  CMakeLists.txt  EvaluateTest.py
